Change inline-block spacing issue fix
Removed html comments (to remove spacing between blocks) and used a
negative margin instead.

--- a/ziplines/calculator/css/calculator.css
+++ b/ziplines/calculator/css/calculator.css
@@ -40,6 +40,7 @@ text-align: center;
 .key-container-small {
   position: relative;
   display: inline-block;
+  margin: -2px;
   margin: 7px;
   width: 30px;
   height: 20px;
@@ -55,6 +56,7 @@ text-align: center;
 .key-container-large {
   position: relative;
   display: inline-block;
+  margin: -2px;
   width: 55px;
   height: 55px;
   border: 2px solid black;
